--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -65,6 +65,25 @@
             }
         }
 
+        .experience-img {
+            flex: 1;
+            box-sizing: border-box;
+            width: 100%;
+            margin-bottom: 0;
+        }
+
+        .experience-info {
+            padding: 1rem;
+
+            h3, a {
+                margin: 0;
+            }
+
+            p {
+                margin: 1rem 0;
+            }
+        }
+
         #contributions-div {
             margin-top: 1rem;
             width: 100%;
