--- a/quartz/components/styles/recentNotes.scss
+++ b/quartz/components/styles/recentNotes.scss
@@ -24,6 +24,14 @@
       .section > .meta {
         margin: 0 0 0.5rem 0;
         opacity: 0.6;
+
+        .external-host {
+          display: inline;
+          margin: 0; 
+          margin-left: .5rem;
+          font-weight: bold;
+          color: var(--dark);
+        }
       }
     }
   }
