External pieces will now be listed on the PageList component if the assoc. frontmatter fields are given; Edited the html and css; Created a single source for the external host html code

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -142,3 +142,10 @@
         }
     }
 }
+
+.external-host {
+    display: inline;
+    margin: 0; 
+    font-weight: bold;
+    color: var(--dark);
+}
