Removed item from image-item

--- a/quartz/styles/imageGrid.scss
+++ b/quartz/styles/imageGrid.scss
@@ -5,13 +5,13 @@
     text-align: center;
   }
   
-  .image-item {
+  .image {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
   
-  .image-item img {
+  .image img {
     max-width: 100%;
     height: auto;
   }
