--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -1,7 +1,7 @@
 @use "./variables.scss" as *;
 @use "./syntax.scss";
 @use "./callouts.scss";
-@use "./imageGrid.scss";
+@use "./directives.scss";
 
 html {
   scroll-behavior: smooth;
