SD Website Design Entry & Image-Grid Edits - Re-added the entry for the design of the SD website (from my old portfolio) - Edited the image-grid code so the number of columns can be specified (if not, it defaults to 4 on desktop)(set to 1 on mobile) - Edited the image-grid invocations in the entries that made use of it - Edited some base styling (Quartz puts an embedded image in a paragraph tag)

--- a/quartz/styles/directives.scss
+++ b/quartz/styles/directives.scss
@@ -1,8 +1,14 @@
 .image-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-columns: 1fr;
   gap: 16px;
   text-align: center;
+}
+
+@media (min-width: 768px) {
+  .image-grid {
+    grid-template-columns: repeat(var(--desktop-columns, 4), 1fr);
+  }
 }
 
 .image {
